tests/expectations/compiler/statements/statements_after_complete_conditional_return_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372025]: Cannot reach the following statement.
    --> compiler-test:10:9
     |
  10 |         let double: u32 = x + x;
     |         ^^^^^^^^^^^^^^^^^^^^^^^
     |
     = Remove the unreachable code.
Error [ETYC0372025]: Cannot reach the following statement.
    --> compiler-test:11:9
     |
  11 |         return double;
     |         ^^^^^^^^^^^^^^
     |
     = Remove the unreachable code.
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {    
     | ^^^^^^^^^^^^
"""]
